dist_man1_MANS=

if BUILD_KOYOTECOIND
  dist_man1_MANS+=koyotecoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=koyotecoin-qt.1
endif

if BUILD_KOYOTECOIN_CLI
  dist_man1_MANS+=koyotecoin-cli.1
endif

if BUILD_KOYOTECOIN_TX
  dist_man1_MANS+=koyotecoin-tx.1
endif

if BUILD_KOYOTECOIN_UTIL
  dist_man1_MANS+=koyotecoin-util.1
endif

if ENABLE_WALLET
if BUILD_KOYOTECOIN_WALLET
  dist_man1_MANS+=koyotecoin-wallet.1
endif
endif
